@@ -3,11 +3,18 @@ DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
 export MALLOC_CHECK_=0
 
-if [[ -z "${JVM_OPTS}" ]]; then
-    JVM_OPTS="-Xms1g -Xmx1g -XX:+UseG1GC -XX:+UseStringDeduplication -XX:MaxGCPauseMillis=30"
+version=$($JAVA_HOME/bin/java -version 2>&1 | awk -F '"' '/version/ {print $2}')
+if [[ "$version" = "15" ]]; then
+    JVM_GC=" -XX:+UseZGC "
+else
+    JVM_GC=" -XX:+G1GC -XX:MaxGCPauseMillis=30 "
 fi
 
-$JAVA_HOME/bin/java $JVM_OPTS\
+if [[ -z "${JVM_OPTS}" ]]; then
+    JVM_OPTS="-Xms1g -Xmx1g -XX:+UseStringDeduplication"
+fi
+
+$JAVA_HOME/bin/java $JVM_GC $JVM_OPTS\
     --add-opens java.base/java.nio=ALL-UNNAMED\
     --add-opens java.base/java.lang=ALL-UNNAMED\
     --add-opens java.base/java.lang.invoke=ALL-UNNAMED\
